--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <div class="navbar">
-  <h1 class="brand">KAIRA</h1>
+  <h1 class="brand">Qetra</h1>
   <ul class="navbar-list">
     <li class="navbar-list-item">
       Home
