home page design done

--- a/src/app/component/new-collection/new-collection.component.html
+++ b/src/app/component/new-collection/new-collection.component.html
@@ -1,12 +1,64 @@
 <div class="main">
   <div class="container">
-    <div class="main-title">Son Çıkanlar</div>
-    <div class="main-text">
+    <div class="main-title animate__animated animate__fadeInUp">
+      Son Çıkanlar
+    </div>
+    <div class="main-text animate__animated animate__fadeInUp">
       Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis
       doloribus numquam eveniet, voluptatem mollitia placeat voluptatibus
       laboriosam libero quaerat reiciendis aperiam tenetur expedita, accusantium
       optio ipsum sequi. Quis enim illo hic blanditiis, alias, eos facilis
       quaerat dolor harum, similique repellat.
+    </div>
+    <div class="new-products animate__animated animate__fadeInUp">
+      <div class="new-product">
+        <div class="prd-image">
+          <img
+            src="https://themewagon.github.io/kaira/images/banner-image-3.jpg"
+            alt=""
+          />
+        </div>
+        <div class="prd-content">
+          <h2 class="prd-title">Soft Leather Jackets</h2>
+          <p class="prd-desc">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio,
+            maiores.
+          </p>
+          <div class="discover">Discover Now</div>
+        </div>
+      </div>
+      <div class="new-product">
+        <div class="prd-image">
+          <img
+            src="https://themewagon.github.io/kaira/images/banner-image-1.jpg"
+            alt=""
+          />
+        </div>
+        <div class="prd-content">
+          <h2 class="prd-title">Soft Leather Jackets</h2>
+          <p class="prd-desc">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio,
+            maiores.
+          </p>
+          <div class="discover">Daha fazlası</div>
+        </div>
+      </div>
+      <div class="new-product">
+        <div class="prd-image">
+          <img
+            src="https://themewagon.github.io/kaira/images/banner-image-2.jpg"
+            alt=""
+          />
+        </div>
+        <div class="prd-content">
+          <h2 class="prd-title">Soft Leather Jackets</h2>
+          <p class="prd-desc">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio,
+            maiores.
+          </p>
+          <div class="discover">Discover Now</div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
