--- a/src/variables.scss
+++ b/src/variables.scss
@@ -3,6 +3,7 @@
   --gray-font-color: #8f8f8f;
   --font-color: #111111;
   --border-color: rgb(221, 221, 221);
+  --green-color: #8c907e;
 }
 
 .main-button {
