--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -75,7 +75,8 @@
 .cart-container {
   z-index: 100;
   position: fixed;
-  display: none;
+  opacity: 0;
+  visibility: hidden;
   top: 0;
   left: 0;
   width: 100%;
@@ -84,7 +85,8 @@
   transition: all 0.3s ease-in-out;
 
   &.open {
-    display: block;
+    opacity: 1;
+    visibility: visible;
   }
 
   &.open .cart-content {
