--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -10,31 +10,12 @@
         <li class="dropdown-item">Home1</li>
       </ul>
     </li>
-    <li class="navbar-list-item">
-      Shop
-      <i class="fa-solid fa-caret-down"></i>
-      <ul class="dropdown">
-        <li class="dropdown-item">Shop1</li>
-        <li class="dropdown-item">Shop1</li>
-        <li class="dropdown-item">Shop1</li>
-      </ul>
-    </li>
-    <li class="navbar-list-item">
-      Blog
-      <i class="fa-solid fa-caret-down"></i>
-    </li>
-    <li class="navbar-list-item">
-      Pages
-      <i class="fa-solid fa-caret-down"></i>
-    </li>
-    <li class="navbar-list-item">
-      Contanct
-      <i class="fa-solid fa-caret-down"></i>
-    </li>
+    <li class="navbar-list-item">Ürünler</li>
+    <li class="navbar-list-item">Bize Ulaşın</li>
   </ul>
   <div class="personal">
-    <div class="wish">Wishlist(0)</div>
-    <div class="cart" (click)="cartIsOpen = !cartIsOpen">Cart(0)</div>
+    <div class="wish">Beğeniler(0)</div>
+    <div class="cart" (click)="cartIsOpen = !cartIsOpen">Sepetin(0)</div>
     <div class="search">
       <i class="fa-solid fa-magnifying-glass"></i>
     </div>
