--- a/src/app/component/new-collection/new-collection.component.scss
+++ b/src/app/component/new-collection/new-collection.component.scss
@@ -21,11 +21,9 @@
     }
 
     .new-products {
+      width: 100%;
+      height: 100%;
       margin-top: 50px;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      gap: 80px;
 
       .new-product {
         &:hover .prd-image {
