--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -6,6 +6,7 @@
   background-color: var(--bg-color);
   border-bottom: 1px solid var(--border-color);
   color: var(--font-color);
+  z-index: 100;
 
   .brand {
     font-size: 35px;
