products sayfası eklendi

--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,5 +1,7 @@
 <div class="navbar">
-  <h1 class="brand">Qetra</h1>
+  <div class="brand">
+    <h1>Qetra</h1>
+  </div>
   <ul class="navbar-list">
     <li class="navbar-list-item">
       Home
@@ -10,7 +12,7 @@
         <li class="dropdown-item">Home1</li>
       </ul>
     </li>
-    <li class="navbar-list-item">Ürünler</li>
+    <li class="navbar-list-item" [routerLink]="['products']">Ürünler</li>
     <li class="navbar-list-item">Bize Ulaşın</li>
   </ul>
   <div class="personal">
