--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -9,9 +9,16 @@
   z-index: 100;
 
   .brand {
-    font-size: 35px;
-    font-weight: normal;
-    text-transform: uppercase;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    h1 {
+      font-weight: normal;
+      text-transform: uppercase;
+      width: 35px;
+      height: 35px;
+    }
   }
 
   .navbar-list {
