--- a/src/app/component/product-list/product-list.component.scss
+++ b/src/app/component/product-list/product-list.component.scss
@@ -6,15 +6,22 @@
     gap: 35px;
 
     .product-card {
+      position: relative;
+      top: 0;
       display: flex;
       flex-direction: column;
       background-color: var(--border-color);
       transition: all 0.3s ease-in-out;
       overflow: hidden;
       border-radius: 15px;
+      cursor: pointer;
 
       &:hover .card-image i {
         display: block;
+      }
+
+      &:hover {
+        top: -10px;
       }
 
       .card-image {
