--- a/src/app/component/product-list/product-list.component.html
+++ b/src/app/component/product-list/product-list.component.html
@@ -150,5 +150,130 @@
         </div>
       </div>
     </div>
+    <div class="product-card">
+      <div class="card-image">
+        <i class="fa-solid fa-heart"></i>
+        <img src="https://picsum.photos/500" />
+      </div>
+      <div class="card-content">
+        <div class="top">
+          <p class="card-title">Cart Title</p>
+          <p class="card-price">$129.99</p>
+        </div>
+        <div class="desc">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio
+          repellendus, laborum dolorem culpa maiores recusandae.
+        </div>
+        <div class="bottom">
+          <div class="stars">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-regular fa-star"></i>
+            <i class="fa-regular fa-star"></i>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="product-card">
+      <div class="card-image">
+        <i class="fa-solid fa-heart"></i>
+        <img src="https://picsum.photos/500" />
+      </div>
+      <div class="card-content">
+        <div class="top">
+          <p class="card-title">Cart Title</p>
+          <p class="card-price">$129.99</p>
+        </div>
+        <div class="desc">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio
+          repellendus, laborum dolorem culpa maiores recusandae.
+        </div>
+        <div class="bottom">
+          <div class="stars">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-regular fa-star"></i>
+            <i class="fa-regular fa-star"></i>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="product-card">
+      <div class="card-image">
+        <i class="fa-solid fa-heart"></i>
+        <img src="https://picsum.photos/500" />
+      </div>
+      <div class="card-content">
+        <div class="top">
+          <p class="card-title">Cart Title</p>
+          <p class="card-price">$129.99</p>
+        </div>
+        <div class="desc">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio
+          repellendus, laborum dolorem culpa maiores recusandae.
+        </div>
+        <div class="bottom">
+          <div class="stars">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-regular fa-star"></i>
+            <i class="fa-regular fa-star"></i>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="product-card">
+      <div class="card-image">
+        <i class="fa-solid fa-heart"></i>
+        <img src="https://picsum.photos/500" />
+      </div>
+      <div class="card-content">
+        <div class="top">
+          <p class="card-title">Cart Title</p>
+          <p class="card-price">$129.99</p>
+        </div>
+        <div class="desc">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio
+          repellendus, laborum dolorem culpa maiores recusandae.
+        </div>
+        <div class="bottom">
+          <div class="stars">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-regular fa-star"></i>
+            <i class="fa-regular fa-star"></i>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="product-card">
+      <div class="card-image">
+        <i class="fa-solid fa-heart"></i>
+        <img src="https://picsum.photos/500" />
+      </div>
+      <div class="card-content">
+        <div class="top">
+          <p class="card-title">Cart Title</p>
+          <p class="card-price">$129.99</p>
+        </div>
+        <div class="desc">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio
+          repellendus, laborum dolorem culpa maiores recusandae.
+        </div>
+        <div class="bottom">
+          <div class="stars">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-regular fa-star"></i>
+            <i class="fa-regular fa-star"></i>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
