--- a/src/app/pages/products/products.component.scss
+++ b/src/app/pages/products/products.component.scss
@@ -2,4 +2,10 @@
   display: grid;
   grid-template-columns: 1fr 4fr;
   gap: 50px;
+
+  .left-bar {
+    position: fixed;
+    left: 0;
+    top: 0;
+  }
 }
