--- a/src/app/shared/left-bar/left-bar.component.html
+++ b/src/app/shared/left-bar/left-bar.component.html
@@ -4,11 +4,18 @@
     <h2 class="brand-text">Qetra</h2>
   </div>
   <div class="categories">
-    <div class="category">Category 1</div>
-    <div class="category">Category 2</div>
-    <div class="category">Category 3</div>
-    <div class="category">Category 4</div>
-    <div class="category">Category 5</div>
-    <div class="category">Category 6</div>
+    <div class="category" (click)="selectedCategory = null">
+      Tüm Kategoriler
+    </div>
+    @for (category of categoryList; track $index) {
+    <div
+      class="category"
+      (click)="changeCategory(category)"
+      [class.active]="category === selectedCategory"
+    >
+      {{ category.title }}
+    </div>
+
+    }
   </div>
 </div>
