--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <div class="navbar">
-  <div class="brand">
+  <div class="brand" [routerLink]="['']">
     <h1>Qetra</h1>
   </div>
   <ul class="navbar-list">
