--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -12,6 +12,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
 
     h1 {
       font-weight: normal;
