--- a/src/app/component/product-list/product-list.component.scss
+++ b/src/app/component/product-list/product-list.component.scss
@@ -18,6 +18,7 @@
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   overflow: hidden;
   transition: transform 0.3s ease-in-out;
+  cursor: pointer;
   &:hover {
     transform: translateY(-10px);
   }
