--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -13,6 +13,9 @@
       </ul>
     </li>
     <li class="navbar-list-item" [routerLink]="['products']">Ürünler</li>
+    <li class="navbar-list-item" [routerLink]="['product-create']">
+      Ürün Ekle
+    </li>
     <li class="navbar-list-item">Bize Ulaşın</li>
   </ul>
   <div class="personal">
