--- a/src/app/component/product-list/product-list.component.scss
+++ b/src/app/component/product-list/product-list.component.scss
@@ -1,5 +1,7 @@
 .main {
   display: flex;
+  flex-direction: column;
+  gap: 25px;
   justify-content: center;
   padding: 40px;
 }
@@ -100,6 +102,41 @@
         font-weight: bold;
         padding: 0 5px;
         transition: all 0.3s ease-in-out;
+      }
+    }
+  }
+}
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+
+  .pageNumbers {
+    display: flex;
+    gap: 8px;
+
+    .pageNumber {
+      background: #fff;
+      border: 1px solid #ddd;
+      color: #4caf50;
+      padding: 8px 12px;
+      font-size: 16px;
+      cursor: pointer;
+      border-radius: 5px;
+      transition: all 0.3s ease-in-out;
+
+      &:hover {
+        background: #388e3c;
+        color: #fff;
+      }
+
+      &.active {
+        background: #4caf50;
+        color: white;
+        font-weight: bold;
+        border-color: #4caf50;
       }
     }
   }
