pagination hatası düzeltildi

--- a/src/app/component/product-list/product-list.component.html
+++ b/src/app/component/product-list/product-list.component.html
@@ -4,7 +4,9 @@
     <div class="product-card" [routerLink]="['/product', prd.id]">
       <div class="card-image">
         <i class="fa-solid fa-heart"></i>
-        <img src="https://picsum.photos/500" />
+        <img
+          [src]="prd.images?.[0] || 'https://img.freepik.com/premium-vector/no-photo-available-vector-icon-default-image-symbol-picture-coming-soon-web-site-mobile-app_87543-18055.jpg'"
+        />
       </div>
       <div class="card-content">
         <div class="top">
