--- a/src/app/component/detail/detail.component.scss
+++ b/src/app/component/detail/detail.component.scss
@@ -19,6 +19,7 @@
       .main-product-image {
         width: 80%;
         height: 600px;
+        border: 2px solid var(--border-color);
         img {
           width: 100%;
           height: 100%;
@@ -34,8 +35,9 @@
 
         .image-photo {
           cursor: pointer;
-          width: 100%;
+          max-width: 150px;
           height: 150px;
+          border: 2px solid var(--border-color);
 
           img {
             width: 100%;
