ürün ekleme bugu fixlendi

--- a/src/variables.scss
+++ b/src/variables.scss
@@ -2,7 +2,7 @@
   --bg-color: #f1f1f0;
   --gray-font-color: #8f8f8f;
   --font-color: #111111;
-  --border-color: rgb(221, 221, 221);
+  --border-color: #dddddd;
   --green-color: #8c907e;
 }
 
