--- a/src/app/admincomponent/product-add/product-add.component.html
+++ b/src/app/admincomponent/product-add/product-add.component.html
@@ -1,12 +1,13 @@
 <div class="product-form">
   <h2>Ürün Ekle</h2>
-  <form>
+  <form [formGroup]="productForm" (ngSubmit)="addProduct()">
     <div class="form-group">
       <label for="product-name">Ürün Adı</label>
       <input
         type="text"
         id="product-name"
         placeholder="Ürün adını girin"
+        formControlName="name"
         required
       />
     </div>
@@ -16,6 +17,7 @@
       <textarea
         id="product-description"
         placeholder="Ürün açıklamasını girin"
+        formControlName="description"
         required
       ></textarea>
     </div>
@@ -23,18 +25,57 @@
     <div class="form-row">
       <div class="form-group">
         <label for="product-price">Fiyat</label>
-        <input type="number" id="product-price" placeholder="₺0.00" required />
+        <input
+          type="number"
+          id="product-price"
+          placeholder="₺0.00"
+          required
+          formControlName="price"
+        />
       </div>
       <div class="form-group">
         <label for="product-discount">İndirim (%)</label>
-        <input type="number" id="product-discount" placeholder="Opsiyonel" />
+        <input
+          type="number"
+          id="product-discount"
+          placeholder="Opsiyonel"
+          formControlName="discount"
+        />
       </div>
+    </div>
+
+    <div class="form-group">
+      <label for="product-category">Kategori</label>
+      <select
+        id="product-category"
+        formControlName="categoryId"
+        required
+        style="
+          border: 1px solid #dddddd;
+          width: 100%;
+          padding: 7px;
+          border-radius: 5px;
+        "
+      >
+        <option value="" selected disabled disabled>Kategori Seçiniz</option>
+        @for (category of categories; track $index) {
+        <option [value]="category.id" class="option-box">
+          {{ category.title }}
+        </option>
+        }
+      </select>
     </div>
 
     <div class="form-group image-upload">
       <label>Ürün Resimleri</label>
       <div class="image-preview-container">
-        <input type="file" id="product-images" multiple accept="image/*" />
+        <input
+          type="file"
+          id="product-images"
+          multiple
+          accept="image/*"
+          (change)="onFileChange($event)"
+        />
         <div class="image-preview" id="imagePreview"></div>
       </div>
     </div>
@@ -42,3 +83,4 @@
     <button type="submit" class="submit-btn">Ekle</button>
   </form>
 </div>
+<app-loader></app-loader>
