--- a/src/app/component/product-list/product-list.component.scss
+++ b/src/app/component/product-list/product-list.component.scss
@@ -29,9 +29,14 @@
 .card-image {
   position: relative;
   overflow: hidden;
+  width: 350px;
+  height: 250px;
+
   img {
     width: 100%;
-    display: block;
+    height: 100%;
+    object-fit: contain;
+    object-position: center;
   }
   i {
     position: absolute;
